--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <!-- Tekstualni opis -->
     <a-entity position="0 0.8 -4.9">
-      <a-text value="U mjestu Olovci ... značajnu kulturnu vrijednost."
+      <a-text value="Na podrucju opcine Kladanj evidentirane su pedeset i dvije nekropole sa ukupno cetristo tri stecaka, i to u naseljima: Kladanj, Kovacici, Konjevici, Staric, Gojsalic, Dopasci, Gojakovici, Prijanovici, Nocajevici, Brgule, Crijevcici, Tarevo, Stupari, Olovci, Suljici, Tuholj i Vranovici. Kladanjski stecci pripadaju jednoj od cetiri klesarske radionice koje su djelovale u istocnoj Bosni. Nekropola u selu Olovci, smjestena oko deset kilometara sjeverozapadno od Kladnja, svjedoci o dugoj istoriji ovog kraja.  Nekropolu cini osamnest i jedan stupac. Vecina stecaka je orijentisana u pravcu zapad–istok, dok su tri izuzetka postavljena u smjeru sjever–jug.Posebno su znacajni ukraseni stecci, među kojima se istice sljemenjak u sredini nekropole, ukrasen dvostrukom spiralom na ceonim stranama. Izdvojen od ostalih, stoji stecak koji nosi natpis u sest redova koji svjedoci da ispod njega pociva feudalac Radomir Jurisalic, pripadnik lokalne plemicke porodice i vjerovatno datira iz petnestog vijeka."
               color="#FFFF00" width="5.5" wrap-count="50"
               align="center" scale="0.5 0.5 0.5">
       </a-text>
